--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,9 +17,31 @@ services:
         resource: '../src/Application/**/*Controller.php'
         tags: ['controller.service_arguments']
 
+    Mhert\AufrufFuerVernunftUndSolidaritaet\App\Domain\Signup\FirstSigneesRepository:
+        '@Mhert\AufrufFuerVernunftUndSolidaritaet\App\Application\Signup\Repository\PostgresqlFirstSigneesRepository'
+
+    Mhert\AufrufFuerVernunftUndSolidaritaet\App\Domain\Signup\OtherSigneesRepository:
+        '@Mhert\AufrufFuerVernunftUndSolidaritaet\App\Application\Signup\Repository\PostgresqlOtherSigneesRepository'
+
+    Mhert\AufrufFuerVernunftUndSolidaritaet\App\Application\Signup\Repository\PostgresqlFirstSigneesRepository:
+        arguments:
+            $postgresql: '@Postgresql'
+
+    Mhert\AufrufFuerVernunftUndSolidaritaet\App\Application\Signup\Repository\PostgresqlOtherSigneesRepository:
+        arguments:
+            $uuidFactory: '@UuidFactory'
+            $postgresql: '@Postgresql'
+
     Symfony\Component\HttpFoundation\Session\Storage\Handler\RedisSessionHandler:
         arguments:
             - '@Redis'
+
+    Postgresql:
+        class: PDO
+        arguments:
+            $dsn: 'pgsql:host=%env(POSTGRESQL_HOST)%;dbname=%env(POSTGRESQL_DBNAME)%'
+            $username: '%env(POSTGRESQ_USER)%'
+            $password: '%env(POSTGRESQ_PASSWORD)%'
 
     Redis:
         class: Predis\Client
@@ -29,3 +51,6 @@ services:
                 host: '%env(REDIS_HOST)%'
                 port: '%env(int:REDIS_PORT)%'
                 password: '%env(REDIS_PASSWORD)%'
+
+    UuidFactory:
+        class: Ramsey\Uuid\UuidFactory
