Add redirects for umlaut-domains

--- a/docker/app-http/nginx.conf
+++ b/docker/app-http/nginx.conf
@@ -26,8 +26,25 @@ http {
 
     gzip  on;
 
+    server_names_hash_bucket_size 256;
+
     server {
-        server_name  _;
+        server_name xn--erklrung-fr-vernunft-und-solidaritt-86c4a10g.de;
+        rewrite ^/(.*)$ https://www.erklaerung-fuer-vernunft-und-solidaritaet.de/$1 redirect;
+    }
+
+    server {
+        server_name erklaerung-fuer-vernunft-und-solidaritaet.de;
+        rewrite ^/(.*)$ https://www.erklaerung-fuer-vernunft-und-solidaritaet.de/$1 redirect;
+    }
+
+    server {
+        server_name www.xn--erklrung-fr-vernunft-und-solidaritt-86c4a10g.de;
+        rewrite ^/(.*)$ https://www.erklaerung-fuer-vernunft-und-solidaritaet.de/$1 redirect;
+    }
+
+    server {
+        server_name _;
 
         root /var/www/public;
         index index.php;
