--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,6 +4,8 @@ framework:
     csrf_protection: true
     http_method_override: false
 
+    trusted_headers: ['x-forwarded-for', 'x-forwarded-host', 'x-forwarded-proto', 'x-forwarded-port', 'x-forwarded-prefix']
+
     session:
         handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\RedisSessionHandler
         cookie_secure: auto
