--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,6 +4,7 @@ framework:
     csrf_protection: true
     http_method_override: false
 
+    trusted_proxies: '127.0.0.1,REMOTE_ADDR'
     trusted_headers: ['x-forwarded-for', 'x-forwarded-host', 'x-forwarded-proto', 'x-forwarded-port', 'x-forwarded-prefix']
 
     session:
