--- a/docker/app-http/nginx.conf
+++ b/docker/app-http/nginx.conf
@@ -29,6 +29,8 @@ http {
     server_names_hash_bucket_size 256;
 
     server {
+        listen 80 proxy_protocol;
+
         server_name _;
 
         root /var/www/public;
@@ -48,6 +50,8 @@ http {
             fastcgi_param DOCUMENT_ROOT $realpath_root;
 
             proxy_set_header Host            $host;
+            proxy_set_header X-Real-IP       $proxy_protocol_addr;
+            proxy_set_header X-Forwarded-For $proxy_protocol_addr;
 
             internal;
         }
